--- a/Feeding_Analysis_report2023_v2.Rmd
+++ b/Feeding_Analysis_report2023_v2.Rmd
@@ -68,7 +68,7 @@ The random forest model classified `r testmat$table[2,2]` of `r sum(testmat$tabl
 
 There were `r dim(plot_OUT)[1]` locations of `r length(unique(plot_OUT$year_id))` bird-seasons predicted by the random forest algorithm to be consistent with foraging at anthropogenic feeding stations. These locations were then summarised in 500 m grid cells, resulting in `r dim(PRED_GRID)[1]` of the `r length(grid)` grid cells in the study area where predicted 'anthropogenic feeding locations' occurred. These locations were then summarised by grid cell, leading to a range of proportions from `r round(min(countgrid$prop_feed, na.rm=T)*100,1)`% to `r round(max(countgrid$prop_feed, na.rm=T)*100,0)`% of GPS locations and `r round(min(PRED_GRID$prop_ind, na.rm=T)*100,1)` to `r round(max(PRED_GRID$prop_ind, na.rm=T)*100,1)`% of individuals that were predicted to be 'feeding' in a grid cell. 
 
-The second random forest model, predicting the occurrence of anthropogenic feeding stations per grid cell based on 7 predictor variables, achieved an AUC of `r round(as.numeric(AUC),3)` for the internally cross-validated training data (no independent test data were available). The predicted probabilities of the study area grid cells containing an anthropogenic feeding station ranged from `r round(min(PRED_GRID$FEEDER_predicted),3)` to `r round(max(PRED_GRID$FEEDER_predicted),3)`, with `r length(which(PRED_GRID$FEEDER_predicted>0.5))` grid cells having a probability >0.5. Of those grid cells with >0.5 predicted probability of containing an anthropogenic feeding site, `r length(which(PRED_GRID$FEEDER_predicted>0.5 & PRED_GRID$FEEDER_observed==1))` had a known feeding site and `r length(which(PRED_GRID$FEEDER_predicted>0.5& PRED_GRID$FEEDER_observed==0))` did not have a known feeding site.
+The second random forest model, predicting the occurrence of anthropogenic feeding stations per grid cell based on 7 predictor variables, achieved an AUC of `r round(as.numeric(AUC),3)` for the internally cross-validated training data, but only `r round(as.numeric(AUC_TEST),3)`  for the external validation data based on feeders identified by interviews (Fig. 3). The predicted probabilities of the study area grid cells containing an anthropogenic feeding station ranged from `r round(min(PRED_GRID$FEEDER_predicted),3)` to `r round(max(PRED_GRID$FEEDER_predicted),3)`, with `r length(which(PRED_GRID$FEEDER_predicted>THRESH))` grid cells having a probability greater than the threshold identified for highest sensitivity (`r round(THRESH,3)`). Of those grid cells with >`r round(THRESH,3)` predicted probability of containing an anthropogenic feeding site, `r length(which(PRED_GRID$FEEDER_predicted>THRESH & PRED_GRID$FEEDER_observed==1))` had a known feeding site and `r length(which(PRED_GRID$FEEDER_predicted>THRESH & PRED_GRID$FEEDER_observed==0))` did not have a known feeding site.
 
 
 ``` {r impplot2, echo=FALSE,warning=FALSE,error=FALSE,message=FALSE, fig.width=10,fig.height=6}
@@ -92,6 +92,9 @@ impplot2<-IMP2[6:1,] %>%
 print(impplot2)
 ```
 *Fig. 2: Relative variable importance to predict whether anthropogenic feeding sites exist in grid cells*
+
+
+The validation data consisted of a list of known feeding locations obtained by interviews. Although some interviews also revealed that certain households were *not* feeding red kites, these data are not suitable to validate predicted 'absences' because they cannot exclude that other households or farms in a grid cell may have been providing food. We therefore focussed on the proportion of correctly identified feeding locations as identified from interviews to validate the predictions of our model. There were a total of  `r dim(VAL_DAT)[1]` grid cells with a known feeding location (from interviews) within the area covered by sufficient red kite tracking data, and `r round(table(VAL_DAT$Classification)[1]/dim(VAL_DAT)[1],3)*100`% of these were correctly predicted (Fig. 3).
 
 
 ```{r leafletmap, echo=FALSE,warning=FALSE,error=FALSE,message=FALSE, fig.width=10,fig.height=8}
@@ -181,6 +184,41 @@ m2
 *Fig. 3: Map of predicted probability of the presence of anthropogenic feeding sites in the main Red Kite study area Switzerland. Dark green points indicate known feeding locations that were used to train models, small grey dots indicate Red Kite GPS locations that were classified as feeding behaviour, and bright red and green points are validation data (feeding locations obtained from interviews that were used to evaluate the predictions).*
 
 
+# Reliability of prediction
+
+To assess whether the predictions are reliable, we draw on two interview datasets where members of the public were asked (by Eva Cereghetti and Fiona Pelle) whether they feed red kites or other scavengers. From the `r dim(VAL_DAT)[1]` known feeding locations available that were not used for training the models, `r round(table(VAL_DAT$Classification)[2]/dim(VAL_DAT)[1],3)*100`% were not predicted with our tracking data, so we explored potential explanatory variables (Fig. 4).
+
+The single most important factor for failing to predict a known feeding location was data scarcity (Fig. 4). Grid cells with a 'missed' prediction had generally fewer GPS points overall, from fewer individuals, and a fewer total number of GPS locations with feeding behaviour. Correct predictions of anthropogenic feeding locations required a minimum of `r min(VAL_DAT$n[VAL_DAT$Classification=="correct"])` GPS locations from a minimum of `r min(VAL_DAT$N_ind[VAL_DAT$Classification=="correct"])` individuals within a given 500 m grid cell.
+
+
+```{r boxplot, echo=FALSE,warning=FALSE,error=FALSE,message=FALSE, fig.width=12,fig.height=8}
+boxplot1<-VAL_DAT %>%
+  st_drop_geometry() %>%
+  select(-FEEDER_observed,-FEEDER_predicted) %>%
+  gather(key=variable, value=value,-Classification) %>%
+  filter(!(variable=="n" & value>45000)) %>%  ### remove a single outlier value
+  filter(!(variable=="N_feed_ind" & value>30)) %>%  ### remove a single outlier value
+  filter(!(variable=="N_feed_points" & value>500)) %>%  ### remove a single outlier value
+  
+  
+  ggplot(aes(x=Classification, y=value)) +
+  geom_boxplot() +
+  facet_wrap(~variable, ncol=3, scales="free_y") +
+  labs(x="Prediction of grid cells with known anthropogenic feeding",
+       y="Value of respective variable") +
+  ggplot2::theme(panel.background=ggplot2::element_rect(fill="white", colour="black"), 
+                 axis.text=ggplot2::element_text(size=16, color="black"),
+                 strip.background=ggplot2::element_rect(fill="white", colour="black"), 
+                 strip.text=ggplot2::element_text(size=16, color="black"),
+                 axis.title=ggplot2::element_text(size=20), 
+                 panel.grid.major = ggplot2::element_blank(), 
+                 panel.grid.minor = ggplot2::element_blank(), 
+                 panel.border = ggplot2::element_blank())
+
+boxplot1
+```
+*Fig. 4: Boxplot of the value of predictor variables (number of GPS points and individuals in each grid cell, both total and with 'feeding' behaviour) at known feeding locations that were either correctly predicted or missed (predicted probability < threshold).*
+
 
 # Projection across Switzerland
 
@@ -191,7 +229,7 @@ We can now quantify the proportion of daytime that Red Kites spend in grid cells
 
 
 
-```{r leafletmap, echo=FALSE,warning=FALSE,error=FALSE,message=FALSE, fig.width=10,fig.height=8}
+```{r SUImap, echo=FALSE,warning=FALSE,error=FALSE,message=FALSE, fig.width=10,fig.height=8}
 OUTgrid<-countgrid %>% 
   mutate(gridid=seq_along(n)) %>%
   left_join(PRED_GRID, by="gridid") %>%
